# d3dx-wrapper

./: .gitignore  LICENSE  README.md  README.txt  d3dx_config.ini
Wrapper-Build/: CMakeLists.txt  d3d10.def  d3d10_config.ini  d3d10_main.cpp  d3d11_config.ini  d3d12.def  d3d12_config.ini  d3d12_main.cpp  d3d9.def  d3d9_config.ini  d3d9_main.cpp  d3d9_tb1.cpp  d3d9_tb2.cpp  d3d9_tc.cpp  d3dx_config.ini  dxgi.def  dxgi_main.cpp  frame_limiter.cpp  frame_limiter.h
